--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -359,36 +359,40 @@
       <!-- Left Search Mode -->
       <Grid Grid.Column="0" RowDefinitions="32,*" IsVisible="{Binding IsSearching}" PropertyChanged="OnSearchCommitPanelPropertyChanged">
         <!-- Search -->
-        <Grid Grid.Row="0" Margin="4,2">
-          <TextBox Grid.Column="1"
-                   x:Name="txtSearchCommitsBox"
-                   Padding="22,0"
-                   FontSize="12"
-                   Height="24"
-                   Background="{DynamicResource Brush.Contents}"
-                   BorderBrush="{DynamicResource Brush.Border2}"
-                   BorderThickness="1"
-                   CornerRadius="12"
-                   Watermark="{DynamicResource Text.Repository.SearchTip}"
-                   Text="{Binding SearchCommitFilter, Mode=TwoWay}"
-                   KeyDown="OnSearchKeyDown"/>
-          <Path Width="14" Height="14"
-                Margin="6,0,0,0"
-                Fill="{DynamicResource Brush.FG2}"
-                Data="{StaticResource Icons.Search}"
-                HorizontalAlignment="Left"/>
-          <Button Classes="icon_button"
-                  Width="16"
-                  Margin="0,0,6,0"
-                  Command="{Binding ClearSearchCommitFilter}"
-                  IsVisible="{Binding SearchCommitFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                  HorizontalAlignment="Right">
+        <TextBox Grid.Row="0" 
+                 x:Name="txtSearchCommitsBox"
+                 Margin="4,2"
+                 FontSize="12"
+                 Height="24"
+                 CornerRadius="12"
+                 BorderThickness="1"
+                 BorderBrush="{DynamicResource Brush.Border2}"
+                 Background="{DynamicResource Brush.Contents}"
+                 Watermark="{DynamicResource Text.Repository.SearchTip}"
+                 Text="{Binding SearchCommitFilter, Mode=TwoWay}"
+                 VerticalContentAlignment="Center"
+                 KeyDown="OnSearchKeyDown">
+          <TextBox.InnerLeftContent>
             <Path Width="14" Height="14"
-                  Margin="0,1,0,0"
-                  Fill="{DynamicResource Brush.FG1}"
-                  Data="{StaticResource Icons.Clear}"/>
-          </Button>
-        </Grid>
+                  Margin="6,0,0,0"
+                  Fill="{DynamicResource Brush.FG2}"
+                  Data="{StaticResource Icons.Search}"/>
+          </TextBox.InnerLeftContent>
+
+          <TextBox.InnerRightContent>
+            <Button Classes="icon_button"
+                    Width="16"
+                    Margin="0,0,6,0"
+                    Command="{Binding ClearSearchCommitFilter}"
+                    IsVisible="{Binding SearchCommitFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                    HorizontalAlignment="Right">
+              <Path Width="14" Height="14"
+                    Margin="0,1,0,0"
+                    Fill="{DynamicResource Brush.FG1}"
+                    Data="{StaticResource Icons.Clear}"/>
+            </Button>
+          </TextBox.InnerRightContent>
+        </TextBox>
 
         <DataGrid Grid.Row="1"
                   ItemsSource="{Binding SearchedCommits}"
