--- a/src/Views/Welcome.axaml
+++ b/src/Views/Welcome.axaml
@@ -27,31 +27,26 @@
 
     <Grid Grid.Row="1" Margin="0,8" ColumnDefinitions="*,600,*">
       <Grid Grid.Column="1" RowDefinitions="Auto,*">
-        <Grid Grid.Row="0" ColumnDefinitions="28,*,Auto">
-          <Border Grid.Column="0" Grid.ColumnSpan="3"
-                  Height="32"
-                  CornerRadius="16"
-                  BorderBrush="{DynamicResource Brush.Border0}"
-                  BorderThickness="1"
-                  Background="{DynamicResource Brush.Contents}"/>
+        <TextBox Grid.Row="0"
+                 Height="32"
+                 Padding="0"
+                 CornerRadius="16"
+                 BorderBrush="{DynamicResource Brush.Border0}"
+                 BorderThickness="1"
+                 Background="{DynamicResource Brush.Contents}"
+                 Watermark="{DynamicResource Text.Welcome.Search}"
+                 VerticalContentAlignment="Center"
+                 Text="{Binding SearchFilter, Mode=TwoWay}">
+          <TextBox.InnerLeftContent>
+            <Path Width="16" Height="16" Margin="6,0,3,0" Data="{StaticResource Icons.Search}" Fill="{DynamicResource Brush.FG1}"/>
+          </TextBox.InnerLeftContent>
 
-          <Path Grid.Column="0"
-                Width="16" Height="16"
-                Margin="4,0,0,0"
-                Data="{StaticResource Icons.Search}"/>
-
-          <TextBox Grid.Column="1"
-                   Height="24"
-                   Padding="0"
-                   Classes="no_border no_background"
-                   Watermark="{DynamicResource Text.Welcome.Search}"
-                   VerticalContentAlignment="Center"
-                   Text="{Binding SearchFilter, Mode=TwoWay}"/>
-
-          <Button Grid.Column="2" Classes="icon_button" IsVisible="{Binding IsClearSearchVisible}" Command="{Binding ClearSearchFilter}">
-            <Path Width="16" Height="16" Margin="0,0,4,0" Data="{StaticResource Icons.Clear}"/>
-          </Button>
-        </Grid>
+          <TextBox.InnerRightContent>
+            <Button Classes="icon_button" IsVisible="{Binding IsClearSearchVisible}" Command="{Binding ClearSearchFilter}">
+              <Path Width="16" Height="16" Margin="0,0,0,0" Data="{StaticResource Icons.Clear}" Fill="{DynamicResource Brush.FG1}"/>
+            </Button>
+          </TextBox.InnerRightContent>
+        </TextBox>
 
         <TreeView Grid.Row="1"
                   Margin="0,8,8,0"
