style: use TextBox.InnerLeftContent and TextBox.InnerRightContent instead of custom layout for search

--- a/src/Views/AddRemote.axaml
+++ b/src/Views/AddRemote.axaml
@@ -41,17 +41,19 @@
 					       Margin="0,0,8,0"
 					       Text="{DynamicResource Text.SSHKey}"
                  IsVisible="{Binding UseSSH}"/>
-      <Grid Grid.Row="2" Grid.Column="2" Height="32" ColumnDefinitions="*,Auto" IsVisible="{Binding UseSSH}">
-        <TextBox Grid.Column="0"
-                 x:Name="txtSSHKey"
-                 Height="26"
-                 CornerRadius="3"
-                 Watermark="{DynamicResource Text.SSHKey.Placeholder}"
-                 Text="{Binding SSHKey, Mode=TwoWay}"/>
-        <Button Grid.Column="1" Classes="icon_button" Width="32" Height="32" Margin="4,0,0,0" Click="SelectSSHKey">
-          <Path Data="{StaticResource Icons.Folder.Open}"/>
-        </Button>
-      </Grid>
+      <TextBox Grid.Row="2" Grid.Column="1"
+               x:Name="txtSSHKey"
+               Height="28"
+               CornerRadius="3"
+               IsVisible="{Binding UseSSH}"
+               Watermark="{DynamicResource Text.SSHKey.Placeholder}"
+               Text="{Binding SSHKey, Mode=TwoWay}">
+        <TextBox.InnerRightContent>
+          <Button Classes="icon_button" Width="30" Height="30" Click="SelectSSHKey">
+            <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+          </Button>
+        </TextBox.InnerRightContent>
+      </TextBox>
     </Grid>
   </StackPanel>
 </UserControl>
