--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -151,15 +151,16 @@
                      Text="{DynamicResource Text.Preference.Git.Path}"
                      HorizontalAlignment="Right"
                      Margin="0,0,16,0"/>
-          <Grid Grid.Row="0" Grid.Column="1" ColumnDefinitions="*,Auto">
-            <TextBox Grid.Column="0"
-                     Height="28"
-                     CornerRadius="3"
-                     Text="{Binding GitInstallPath, Mode=TwoWay}"/>
-            <Button Grid.Column="1" Classes="icon_button" Width="32" Height="32" Margin="4,0,0,0" Click="SelectGitExecutable">
-              <Path Data="{StaticResource Icons.Folder.Open}"/>
-            </Button>
-          </Grid>
+          <TextBox Grid.Row="0" Grid.Column="1"
+                   Height="28"
+                   CornerRadius="3"
+                   Text="{Binding GitInstallPath, Mode=TwoWay}">
+            <TextBox.InnerRightContent>
+              <Button Classes="icon_button" Width="30" Height="30" Click="SelectGitExecutable">
+                <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+              </Button>
+            </TextBox.InnerRightContent>
+          </TextBox>
 
           <TextBlock Grid.Row="1" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.Git.Version}"
@@ -172,15 +173,16 @@
                      Text="{DynamicResource Text.Preference.Git.DefaultCloneDir}"
                      HorizontalAlignment="Right"
                      Margin="0,0,16,0"/>
-          <Grid Grid.Row="2" Grid.Column="1" ColumnDefinitions="*,Auto">
-            <TextBox Grid.Column="0"
-                     Height="28"
-                     CornerRadius="3"
-                     Text="{Binding GitDefaultCloneDir, Mode=TwoWay}"/>
-            <Button Grid.Column="1" Classes="icon_button" Width="32" Height="32" Margin="4,0,0,0" Click="SelectDefaultCloneDir">
-              <Path Data="{StaticResource Icons.Folder.Open}"/>
-            </Button>
-          </Grid>
+          <TextBox Grid.Row="2" Grid.Column="1"
+                   Height="28"
+                   CornerRadius="3"
+                   Text="{Binding GitDefaultCloneDir, Mode=TwoWay}">
+            <TextBox.InnerRightContent>
+              <Button Classes="icon_button" Width="30" Height="30" Click="SelectDefaultCloneDir">
+                <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+              </Button>
+            </TextBox.InnerRightContent>
+          </TextBox>
 
           <TextBlock Grid.Row="3" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.Git.User}"
@@ -245,16 +247,17 @@
                      Text="{DynamicResource Text.Preference.GPG.Path}"
                      HorizontalAlignment="Right"
                      Margin="0,0,16,0"/>
-          <Grid Grid.Row="1" Grid.Column="1" ColumnDefinitions="*,Auto">
-            <TextBox Grid.Column="0"
-                     x:Name="txtGPGExecutable"
-                     Height="28"
-                     CornerRadius="3"
-                     Text="{Binding #me.GPGExecutableFile, Mode=TwoWay}"/>
-            <Button Grid.Column="1" Classes="icon_button" Width="32" Height="32" Margin="4,0,0,0" Click="SelectGPGExecutable">
-              <Path Data="{StaticResource Icons.Folder.Open}"/>
-            </Button>
-          </Grid>
+          <TextBox Grid.Row="1" Grid.Column="1"
+                   x:Name="txtGPGExecutable"
+                   Height="28"
+                   CornerRadius="3"
+                   Text="{Binding #me.GPGExecutableFile, Mode=TwoWay}">
+            <TextBox.InnerRightContent>
+              <Button Classes="icon_button" Width="30" Height="30" Click="SelectGPGExecutable">
+                <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+              </Button>
+            </TextBox.InnerRightContent>
+          </TextBox>
 
           <TextBlock Grid.Row="2" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.GPG.UserKey}"
@@ -290,15 +293,16 @@
                      Text="{DynamicResource Text.Preference.Merger.Path}"
                      HorizontalAlignment="Right"
                      Margin="0,0,16,0"/>
-          <Grid Grid.Row="1" Grid.Column="1" ColumnDefinitions="*,Auto">
-            <TextBox Grid.Column="0"
-                     Height="28"
-                     CornerRadius="3"
-                     Text="{Binding ExternalMergeToolPath, Mode=TwoWay}"/>
-            <Button Grid.Column="1" Classes="icon_button" Width="32" Height="32" Margin="4,0,0,0" Click="SelectExternalMergeTool">
-              <Path Data="{StaticResource Icons.Folder.Open}"/>
-            </Button>
-          </Grid>
+          <TextBox Grid.Row="1" Grid.Column="1"
+                   Height="28"
+                   CornerRadius="3"
+                   Text="{Binding ExternalMergeToolPath, Mode=TwoWay}">
+            <TextBox.InnerRightContent>
+              <Button Classes="icon_button" Width="30" Height="30" Click="SelectExternalMergeTool">
+                <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+              </Button>
+            </TextBox.InnerRightContent>
+          </TextBox>
 
           <TextBlock Grid.Row="2" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.Merger.CustomMergeCmd}"
