--- a/src/Views/Apply.axaml
+++ b/src/Views/Apply.axaml
@@ -18,17 +18,18 @@
 					       HorizontalAlignment="Right" VerticalAlignment="Center"
 					       Margin="0,0,8,0"
 					       Text="{DynamicResource Text.Apply.File}"/>
-      <Grid Grid.Row="0" Grid.Column="1" ColumnDefinitions="*,Auto">
-        <TextBox Grid.Column="0"
-                 x:Name="txtPatchFile"
-                 Height="28"
-                 CornerRadius="3"
-                 Watermark="{DynamicResource Text.Apply.File.Placeholder}"
-                 Text="{Binding PatchFile, Mode=TwoWay}"/>
-        <Button Grid.Column="1" Classes="icon_button" Width="32" Height="32" Margin="4,0,0,0" Click="SelectPatchFile">
-          <Path Data="{StaticResource Icons.Folder.Open}"/>
-        </Button>
-      </Grid>
+      <TextBox Grid.Row="0" Grid.Column="1"
+               x:Name="txtPatchFile"
+               Height="28"
+               CornerRadius="3"
+               Watermark="{DynamicResource Text.Apply.File.Placeholder}"
+               Text="{Binding PatchFile, Mode=TwoWay}">
+        <TextBox.InnerRightContent>
+          <Button Classes="icon_button" Width="30" Height="30" Click="SelectPatchFile">
+            <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
+          </Button>
+        </TextBox.InnerRightContent>
+      </TextBox>
 
       <TextBlock Grid.Row="1" Grid.Column="0"
 					       HorizontalAlignment="Right" VerticalAlignment="Center"
